--- a/main/translations/app_ja.xml
+++ b/main/translations/app_ja.xml
@@ -536,7 +536,7 @@
 
 <!-- ========== Scroll Screenshot (Long Screenshot) ========== -->
 <context>
-    <name>ScrollScreenshotToolbar</name>
+    <name>FloatingToolbar</name>
     <message>
         <source>Drag to move</source>
         <translation>ドラッグして移動</translation>
