--- a/main/translations/app_zh.xml
+++ b/main/translations/app_zh.xml
@@ -534,7 +534,7 @@
 
 <!-- ========== Scroll Screenshot (Long Screenshot) ========== -->
 <context>
-    <name>ScrollScreenshotToolbar</name>
+    <name>FloatingToolbar</name>
     <message>
         <source>Drag to move</source>
         <translation>拖动以移动</translation>
