--- a/main/translations/app_en.xml
+++ b/main/translations/app_en.xml
@@ -211,8 +211,8 @@
         <translation>Scale:</translation>
     </message>
     <message>
-        <source>💡 If small text cannot be recognized, enable image upscale.</source>
-        <translation>💡 If small text cannot be recognized, enable image upscale.</translation>
+        <source>💡 Supports 100+ languages: Chinese, English, Japanese, Korean, Arabic, etc.</source>
+        <translation>💡 Supports 100+ languages: Chinese, English, Japanese, Korean, Arabic, etc.</translation>
     </message>
     
     <!-- Log Page -->
