--- a/main/translations/app_ja.xml
+++ b/main/translations/app_ja.xml
@@ -213,8 +213,8 @@
         <translation>倍率:</translation>
     </message>
     <message>
-        <source>💡 If small text cannot be recognized, enable image upscale.</source>
-        <translation>💡 小さい文字が認識できない場合は、画像拡大を有効にしてください。</translation>
+        <source>💡 Supports 100+ languages: Chinese, English, Japanese, Korean, Arabic, etc.</source>
+        <translation>💡 100以上の言語に対応：中国語、英語、日本語、韓国語、アラビア語など</translation>
     </message>
     
     <!-- Log Page -->
