--- a/main/translations/app_zh.xml
+++ b/main/translations/app_zh.xml
@@ -211,8 +211,8 @@
         <translation>倍率:</translation>
     </message>
     <message>
-        <source>💡 If small text cannot be recognized, enable image upscale.</source>
-        <translation>💡 如果小字无法识别，请启用图像放大。</translation>
+        <source>💡 Supports 100+ languages: Chinese, English, Japanese, Korean, Arabic, etc.</source>
+        <translation>💡 支持100+种语言：中文、英语、日语、韩语、阿拉伯语等</translation>
     </message>
     
     <!-- Log Page -->
